Fix alignment of image

--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,8 @@ body {
 }
 
 #pfp {
-
-    margin: 0 auto;
+    display: flex;
+    justify-content:center;
 }
 
 #pfp img {
